build private Quickque licence admin
